--- a/start.html
+++ b/start.html
@@ -1,3 +1,8 @@
 <html>
-
+  <head>Main Page</head>
+  <body>
+      <h1>Hello</h1>
+        <p>Hello there! Welcome to my page. This is where I will be sharing the knowledge that I have received.<br>
+          In addition to that, I would like to also ensure </p>
+  </body>
 </html>
