--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head>Main Page</head>
+  <head><title>Main Page</title></head>
   <body>
       <h1>Hello</h1>
         <p>Hello there! Welcome to my page. This is where I will be sharing the knowledge that I have received.<br>
