--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
    
 	<div style = "position:relative;">
 		<div style = "color:#ddd; background-color: #282E34; text-align:center; padding: 50px 80px; text-align:justify;"</div>
-	<button class = "button" onclick = "window.location.href = 'aboutus.html'"><span>The team</span> </button>
-	<p>Click the button to meet us.</p>
+	<button class = "button" onclick = "window.location.href = 'aboutme.html'"><span>The team</span> </button>
+	<p>Click the button to meet me.</p>
 	</div>
 	
 	<div class = "bgimg-4">
