--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
     </h1>
     <body>
       <p>I am Aiman. I like to learn anything that I find interesting</p>
+      <p>This website serves as my blog or portfolio so I can track my progress and also serve as a knowledge sharing site or all you viewers out there.</p>
     </body>
   </body>
 </html>
